[package]
name = "brainfsym"
version = "0.1.0"
authors = ["Benjamin Levy <blevy@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brainfuck_rs = "2.0.0"
nom = "^4"
derive_setters = "0.1.3"
log = "0.4.8"

[dependencies.z3]
git = "https://github.com/prove-rs/z3.rs"
features = ["static-link-z3"]
