[package]
name = "brainfsym-web"
version = "0.1.0"
authors = ["Benjamin Levy <blevy@protonmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
brainfsym = { path = "../lib" }
yew = { version = "0.14.3", features = ["web_sys"] }
wasm-bindgen = "0.2.60"

[build-dependencies]
dirs = "2.0.2"
